<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/ic_troubletickets"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/ttLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:shadowColor="@color/borderColor"
            android:text="@string/app_name"
            android:fontFamily="@fonts/Poppins-Light"
            android:textAlignment="center"
            android:textColor="#202020"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ttLabel">

            <EditText
                android:id="@+id/userPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/userPhone"
                android:inputType="phone"
                android:padding="6dp"
                android:textAlignment="center" />


            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userPhone"
                android:layout_alignStart="@+id/userPhone"
                android:layout_alignLeft="@+id/userPhone"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/userPassword"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/signin"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userPassword"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="8dp"

                android:text="@string/login"
                android:textColor="#464b54"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/newAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/signup"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>