<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComplainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/createComplaint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/createComplaint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Create complain"
            android:textStyle="bold"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerName" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <AutoCompleteTextView
                android:id="@+id/userSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="37dp"
                android:background="@drawable/complain_type"
                android:ems="10"
                android:hint="@string/complaintType"
                android:inputType="text"
                android:padding="6dp"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/arrowDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/userSubject"
                android:layout_alignEnd="@+id/userSubject"
                android:layout_alignRight="@+id/userSubject"
                android:layout_alignTop="@+id/userSubject"
                android:contentDescription="@string/arrow_dropdown"
                android:padding="6dp"
                />

            <EditText
                android:id="@+id/userMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/userSubject"
                android:layout_alignStart="@+id/userSubject"
                android:layout_below="@+id/userSubject"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="6dp"
                android:singleLine="false"
                android:background="@drawable/description_box"
                android:ems="10"
                android:gravity="top|center_horizontal"
                android:hint="@string/userMessage"/>

            <Button
                android:id="@+id/complainSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userMessage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/submit" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>